# npmview

./: pyproject.toml  requirements.txt
npmview/: __init__.py  exceptions.py  npmview.py
scripts/: main.py
tests/: test.py
